<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.details.DetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/collapsing_layout"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:scrimAnimationDuration="0"
            app:expandedTitleTextAppearance="@android:color/transparent"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:id="@+id/top"
                android:fitsSystemWindows="true"
                >

                <ImageView
                    android:id="@+id/details_poster"
                    android:layout_width="@dimen/list_poster_view_width"
                    android:layout_height="@dimen/list_poster_view_height"
                    android:elevation="5dp"
                    android:src="@drawable/default_poster"
                    app:layout_collapseMode="parallax"
                    android:layout_alignBottom="@id/top_ln"
                    android:layout_marginLeft="17dp"
                    android:layout_marginRight="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/top_ln">


                    <ImageView
                        android:id="@+id/details_backdrop"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/backdrop_height"
                        android:src="@drawable/random_backdrop"
                        app:layout_collapseMode="parallax" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:orientation="vertical"
                        android:layout_marginLeft="@dimen/left">

                        <TextView
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/details_subtitle_time"
                            android:text="2019 • 2 hours"
                            android:maxLines="1"
                            android:textSize="@dimen/secondary_text_size"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/details_subtitle"
                            android:text="@string/default_title"
                            android:textSize="@dimen/details_title_text_size"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:textColor="@color/white_text_color"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/default_genres"
                            android:id="@+id/details_subtitle_genres"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:textSize="@dimen/secondary_text_size"/>

                    </LinearLayout>

                </LinearLayout>



            </RelativeLayout>


            <android.support.v7.widget.Toolbar
                android:id="@+id/details_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                />


        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:id="@+id/details_scrollview"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:textSize="@dimen/sub_title_details_text_size"
                android:textStyle="bold"
                android:paddingRight="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:id="@+id/details_overview_subtitle"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/details_description"
                android:textColor="@color/black_text_color"
                android:textSize="@dimen/description_text_size"
                android:text="@string/random_big_text"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"/>

            <include layout="@layout/details_facts"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cast"
                    android:layout_marginBottom="10dp"
                    android:textSize="@dimen/sub_title_details_text_size"
                    android:textStyle="bold"
                    android:id="@+id/details_cast_subtitle"/>

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/details_cast_list"
                    android:orientation="horizontal"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    tools:listitem="@layout/trailers_list_item"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trailers"
                    android:layout_marginBottom="10dp"
                    android:textSize="@dimen/sub_title_details_text_size"
                    android:textStyle="bold"
                    android:id="@+id/details_trailers_subtitle"/>

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/details_trailers_list"
                    android:orientation="horizontal"
                    tools:listitem="@layout/trailers_list_item"/>


            </LinearLayout>



        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/details_progressbar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:outlineAmbientShadowColor="@color/colorPrimary"
        android:visibility="gone"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/reload"
        android:layout_gravity="center"
        android:id="@+id/details_reload"
        android:visibility="gone"/>

</android.support.design.widget.CoordinatorLayout>